backend/technitium-dns/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technitium-dns
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16,10.0.0.0/8
    cert-manager.io/cluster-issuer: letsencrypt-production
    # Get Homepage configuration
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: DNS server
    gethomepage.dev/group: Global
    gethomepage.dev/icon: technitium.png
    gethomepage.dev/name: Technitium
    gethomepage.dev/pod-selector: app=technitium-dns
spec:
  ingressClassName: nginx
  rules:
  - host: dns.<homelab-domain>
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: technitium-admin
              port:
                name: web-http
        - path: /dns-query
          pathType: Prefix
          backend:
            service:
              name: technitium-dns
              port:
                name: dns-http
  tls:
    - hosts:
      - dns.<homelab-domain>
      secretName: "dns.<homelab-domain>-cert"
